--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,26 @@
 {
-    "version": 2,
     "builds": [
       {
-        "src": "wsgi.py",
-        "use": "@vercel/python",
+        "src": "build_files.sh",
+        "use": "@vercel/static-build",
         "config": {
-          "maxLambdaSize": "15mb",
-          "runtime": "python3.9" 
+          "distDir": "staticfiles_build"
         }
+      },
+      {
+        "src": "myproject/wsgi.py",
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb" }
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "wsgi.py"
+        "dest": "myproject/wsgi.py"
+      },
+      {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
       }
     ]
   }
-  
