--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,23 @@
-
 {
-    "builds": [{
-        "src": "/myproject/wsgi.py",
+    "version": 2,
+    "builds": [
+      {
+        "src": "myproject/wsgi.py",
         "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.11.2" }
-    }],
-    "routes": [
-        {
-            "src": "/",
-            "dest": "/myproject/wsgi.py"
+        "config": {
+          "runtime": "python3.9"  
         }
+      }
+    ],
+    "routes": [
+      {
+        "src": "/static/(.*)",
+        "dest": "static/*" 
+      },
+      {
+        "src": "/(.*)",
+        "dest": "myproject/wsgi.py"
+      }
     ]
-}
+  }
+  
