--- a/vercel.json
+++ b/vercel.json
@@ -2,21 +2,22 @@
     "version": 2,
     "builds": [
       {
-        "src": "myproject/wsgi.py",
-        "use": "@vercel/python",
-        "config": {
-          "runtime": "python3.9"  
-        }
+        "src": "manage.py",
+        "use": "@vercel/python"
+      },
+      {
+        "src": "staticfiles/**/*",
+        "use": "@vercel/static"
       }
     ],
     "routes": [
       {
         "src": "/static/(.*)",
-        "dest": "static/*" 
+        "dest": "/static/$1"
       },
       {
         "src": "/(.*)",
-        "dest": "myproject/wsgi.py"
+        "dest": "manage.py"
       }
     ]
   }
